--- a/QiJiMaShuStudents/myCenter /From/Setting/C/AboutViewController.xib
+++ b/QiJiMaShuStudents/myCenter /From/Setting/C/AboutViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -61,7 +61,7 @@
                         <constraint firstItem="ZcK-Ix-ENA" firstAttribute="leading" secondItem="NmV-6V-Ui4" secondAttribute="trailing" id="pMQ-IU-lmY"/>
                     </constraints>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024-学员" translatesAutoresizingMaskIntoConstraints="NO" id="xVT-fc-guS">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGOQJMS" translatesAutoresizingMaskIntoConstraints="NO" id="xVT-fc-guS">
                     <rect key="frame" x="138.5" y="109" width="98" height="98"/>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
@@ -78,7 +78,7 @@
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="杭州**科技 版权所有" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WqI-lA-sPX" userLabel="杭州**科技 版权所有">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="骐骥马术科技公司 版权所有" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WqI-lA-sPX" userLabel="杭州**科技 版权所有">
                     <rect key="frame" x="0.0" y="605" width="375" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="O4x-pP-9uq"/>
@@ -117,7 +117,7 @@
         </view>
     </objects>
     <resources>
-        <image name="1024-学员" width="100" height="100"/>
+        <image name="LOGOQJMS" width="512" height="512"/>
         <image name="arrow_back_userinfohome" width="10" height="18"/>
     </resources>
 </document>
