--- a/QiJiMaShuStudents/myCoach/Main/C/CoachDetailViewController.xib
+++ b/QiJiMaShuStudents/myCoach/Main/C/CoachDetailViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -203,16 +203,16 @@
                             <rect key="frame" x="0.0" y="0.0" width="600" height="58"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_dail" translatesAutoresizingMaskIntoConstraints="NO" id="ldW-wE-QvF">
-                                    <rect key="frame" x="37" y="10" width="17" height="17"/>
+                                    <rect key="frame" x="36.5" y="10" width="17" height="17"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="17" id="cVB-vy-m5h"/>
                                         <constraint firstAttribute="height" constant="17" id="m4g-G1-7Dh"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="电话咨询" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lkn-yo-Kcl">
-                                    <rect key="frame" x="25" y="33" width="40" height="12"/>
+                                    <rect key="frame" x="25" y="33" width="61" height="12"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="40" id="aaP-6b-1ly"/>
+                                        <constraint firstAttribute="width" constant="61" id="aaP-6b-1ly"/>
                                         <constraint firstAttribute="height" constant="12" id="ofg-Ax-jeC"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
@@ -220,13 +220,13 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qxW-Vb-Zbv" userLabel="call">
-                                    <rect key="frame" x="0.0" y="0.0" width="91" height="58"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="255" height="58"/>
                                     <connections>
                                         <action selector="phoneCallClick:" destination="-1" eventType="touchUpInside" id="3FT-8I-UFV"/>
                                     </connections>
                                 </button>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2jp-aa-7kK" userLabel="line">
-                                    <rect key="frame" x="91" y="14" width="1" height="30"/>
+                                    <rect key="frame" x="86" y="14" width="1" height="30"/>
                                     <color key="backgroundColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="1" id="Mmy-Db-tAP"/>
@@ -271,16 +271,16 @@
                             </subviews>
                             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstItem="2jp-aa-7kK" firstAttribute="leading" secondItem="qxW-Vb-Zbv" secondAttribute="trailing" id="5hd-NW-E6l"/>
+                                <constraint firstItem="2jp-aa-7kK" firstAttribute="leading" secondItem="qxW-Vb-Zbv" secondAttribute="trailing" constant="-169" id="5hd-NW-E6l"/>
                                 <constraint firstItem="xpq-F2-Xu9" firstAttribute="centerX" secondItem="jQY-NK-tDd" secondAttribute="centerX" id="6U9-8c-wyC"/>
-                                <constraint firstItem="2jp-aa-7kK" firstAttribute="leading" secondItem="kJy-uf-EtN" secondAttribute="leading" constant="91" id="A69-dM-fSh"/>
+                                <constraint firstItem="2jp-aa-7kK" firstAttribute="leading" secondItem="kJy-uf-EtN" secondAttribute="leading" constant="86" id="A69-dM-fSh"/>
                                 <constraint firstAttribute="height" constant="58" id="G3e-CP-yPL"/>
                                 <constraint firstItem="Lkn-yo-Kcl" firstAttribute="top" secondItem="ldW-wE-QvF" secondAttribute="bottom" constant="6" id="IkF-uo-K0l"/>
                                 <constraint firstAttribute="bottom" secondItem="Lkn-yo-Kcl" secondAttribute="bottom" constant="13" id="LKX-5V-LRR"/>
                                 <constraint firstAttribute="bottom" secondItem="qxW-Vb-Zbv" secondAttribute="bottom" id="LrZ-IK-mx3"/>
                                 <constraint firstItem="Lkn-yo-Kcl" firstAttribute="leading" secondItem="kJy-uf-EtN" secondAttribute="leading" constant="25" id="P2j-ic-hvZ"/>
                                 <constraint firstAttribute="trailing" secondItem="Tuw-jV-lI4" secondAttribute="trailing" constant="14" id="R2R-ZY-rQt"/>
-                                <constraint firstItem="ldW-wE-QvF" firstAttribute="centerX" secondItem="Lkn-yo-Kcl" secondAttribute="centerX" id="S2o-4r-zRo"/>
+                                <constraint firstItem="ldW-wE-QvF" firstAttribute="centerX" secondItem="Lkn-yo-Kcl" secondAttribute="centerX" constant="-10.5" id="S2o-4r-zRo"/>
                                 <constraint firstItem="jQY-NK-tDd" firstAttribute="top" secondItem="xpq-F2-Xu9" secondAttribute="bottom" constant="9" id="TiO-LV-joh"/>
                                 <constraint firstItem="qxW-Vb-Zbv" firstAttribute="top" secondItem="kJy-uf-EtN" secondAttribute="top" id="V6x-cg-ToK"/>
                                 <constraint firstItem="Tuw-jV-lI4" firstAttribute="centerY" secondItem="kJy-uf-EtN" secondAttribute="centerY" id="ktd-Jh-qA1"/>
